src/objects/TAT_Swimline__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAT_Stage_Swimline_Description__c</fullName>
        <label>TAT Stage Swimline Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TAT_Stage_Swimline__c</fullName>
        <label>TAT Stage Swimline</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>TAT Swimline</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TAT_Stage_Swimline__c</columns>
        <columns>TAT_Stage_Swimline_Description__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAT Swimline</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>